--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row">
-		<div class="col-md-12 logo"> <img src="/assets/images/burger.png" alt="burger image" id="burger_img">
+		<div class="col-md-12 logo"> <img src="/assets/images/burger.png" alt="burger image">
 			<h2>Eat-Da-Burger!</h2> </div>
 	</div>
 	<div class="row">
