--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,73 @@
 body{
-    background-color: blue;
+    background-color: navy;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+    padding-top: 30px;
 }
+
+.burger-form > button[type=submit]{
+    margin: 15px 0;
+}
+
+.well-burger{
+    border-radius: 6px;
+    border: solid 1px #fff;
+}
+
+.well-burger > p{
+    display: inline-block;
+    margin: 7px 0;
+}
+
+h2{
+    color:#f97142;
+    font-weight: 700;
+}
+
+.logo img {
+    width: 250px !important;
+    height: 250px !important;
+}
+
+.btn-dark {
+    background-color: #424242;
+    color: #fff;
+
+}
+.btn-dark:hover {
+    background-color: #313131;
+    color: #fff;
+
+}
+
+.btn.btn-link[disabled] {
+    background-color: #fff;
+    color: #fff;
+}
+.form-control-borderless {
+    border: none;
+}
+
+.form-control-borderless:hover, .form-control-borderless:active, .form-control-borderless:focus {
+    border: none;
+    outline: none;
+    box-shadow: none;
+}
+
+.bg-light {
+    background-color: #fff
+}
+
+.card {
+    background-color: #fff;
+    border: solid 1px #fff;
+}
+
+.h1 {
+    color:#f97142 
+}
+
+p {
+    color:#f97142 !important;
+}
+
